--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "dependencies": {
         "core-js": "^2.6.5",
         "firebase": "^6.0.0",
+        "muse-ui": "^3.0.2",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
         "vue-property-decorator": "^8.1.0",
         "vue-router": "^3.0.3",
+        "vue-toasted": "^1.1.26",
+        "vuejs-logger": "^1.5.3",
         "vuex": "^3.0.1"
     },
     "devDependencies": {
