--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,11 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
+node_modules/
+public/js/
+public/css/
+public/img/
+public/hot/
+public/storage/
+storage/*.key
+vendor
 .env
 .phpunit.result.cache
 Homestead.json
