--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
             "email": "beohoang98@users.noreply.github.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "scripts": {
+        "post-install-cmd": ["cd backend && composer install && composer update"]
+    }
 }
