--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           name: Deploy Master to Heroku
           command: |
             cd ~/repos/
-            git add .
+            git add -A
             git config --local user.email "beohoang98@users.noreply.github.com"
             git config --local user.name "Beo Hoang"
             git commit -m deploy_${CIRCLE_BUILD_NUM}
