--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
             "email": "beohoang98@users.noreply.github.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": "^7.2.0"
+    },
     "scripts": {
         "post-install-cmd": ["cd backend && composer install && composer update"]
     }
