--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
         "alrik11es/cowsayphp": "^1.2"
     },
     "scripts": {
-        "post-install-cmd": ["cd backend && composer install && composer update"]
+        "post-install-cmd": ["cd backend && composer update"]
     }
 }
