--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "axios": "^0.18.0",
         "core-js": "^2.6.5",
         "lodash": "^4.17.11",
+        "moment": "^2.24.0",
         "muse-ui": "^3.0.2",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
