--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "muse-ui": "^3.0.2",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
+        "vue-google-charts": "^0.3.2",
         "vue-property-decorator": "^8.1.0",
         "vue-router": "^3.0.3",
         "vuex": "^3.0.1"
@@ -28,6 +29,7 @@
         "@vue/cli-service": "^3.7.0",
         "@vue/test-utils": "1.0.0-beta.29",
         "babel-core": "7.0.0-bridge.0",
+        "dts-gen": "^0.5.8",
         "node-sass": "^4.9.0",
         "sass-loader": "^7.1.0",
         "ts-jest": "^23.0.0",
