--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,16 +8,19 @@
         "test:unit": "vue-cli-service test:unit"
     },
     "dependencies": {
+        "@types/nprogress": "^0.2.0",
         "axios": "^0.18.0",
         "core-js": "^2.6.5",
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
         "muse-ui": "^3.0.2",
+        "nprogress": "^0.2.0",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
         "vue-google-charts": "^0.3.2",
         "vue-property-decorator": "^8.1.0",
         "vue-router": "^3.0.3",
+        "vue-spinner": "^1.0.3",
         "vuex": "^3.0.1"
     },
     "devDependencies": {
