--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "core-js": "^2.6.5",
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
+        "moment-timezone": "^0.5.25",
         "muse-ui": "^3.0.2",
         "nprogress": "^0.2.0",
         "v-tooltip": "^2.0.2",
@@ -23,12 +24,14 @@
         "vue-google-charts": "^0.3.2",
         "vue-property-decorator": "^8.1.0",
         "vue-router": "^3.0.3",
+        "vue-shortkey": "^3.1.7",
         "vue-spinner": "^1.0.3",
         "vuex": "^3.0.1"
     },
     "devDependencies": {
         "@types/jest": "^23.1.4",
         "@types/lodash": "^4.14.129",
+        "@types/moment-timezone": "^0.5.12",
         "@vue/cli-plugin-babel": "^3.7.0",
         "@vue/cli-plugin-typescript": "^3.7.0",
         "@vue/cli-plugin-unit-jest": "^3.7.0",
