--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
         "vue-router": "^3.0.3",
         "vue-shortkey": "^3.1.7",
         "vue-spinner": "^1.0.3",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "vuex-class": "^0.3.2"
     },
     "devDependencies": {
         "@types/jest": "^23.1.4",
