update hoa don, search theo ngay

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,49 +1,53 @@
 {
-    "name": "frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve --port 8003",
-        "build": "rm -rf ../backend/public/{js,css,img} && vue-cli-service build --no-clean",
-        "test:unit": "vue-cli-service test:unit"
-    },
-    "dependencies": {
-        "@casl/ability": "^3.0.2",
-        "@casl/vue": "^0.5.1",
-        "@types/nprogress": "^0.2.0",
-        "axios": "^0.18.0",
-        "core-js": "^2.6.5",
-        "lodash": "^4.17.11",
-        "moment": "^2.24.0",
-        "moment-timezone": "^0.5.25",
-        "muse-ui": "^3.0.2",
-        "nprogress": "^0.2.0",
-        "v-tooltip": "^2.0.2",
-        "vue": "^2.6.10",
-        "vue-class-component": "^7.0.2",
-        "vue-google-charts": "^0.3.2",
-        "vue-property-decorator": "^8.1.0",
-        "vue-router": "^3.0.3",
-        "vue-shortkey": "^3.1.7",
-        "vue-spinner": "^1.0.3",
-        "vuex": "^3.0.1",
-        "vuex-class": "^0.3.2"
-    },
-    "devDependencies": {
-        "@types/jest": "^23.1.4",
-        "@types/lodash": "^4.14.129",
-        "@types/moment-timezone": "^0.5.12",
-        "@vue/cli-plugin-babel": "^3.7.0",
-        "@vue/cli-plugin-typescript": "^3.7.0",
-        "@vue/cli-plugin-unit-jest": "^3.7.0",
-        "@vue/cli-service": "^3.7.0",
-        "@vue/test-utils": "1.0.0-beta.29",
-        "babel-core": "7.0.0-bridge.0",
-        "dts-gen": "^0.5.8",
-        "node-sass": "^4.9.0",
-        "sass-loader": "^7.1.0",
-        "ts-jest": "^23.0.0",
-        "typescript": "^3.4.3",
-        "vue-template-compiler": "^2.5.21"
-    }
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve --port 8003",
+    "build": "rm -rf ../backend/public/{js,css,img} && vue-cli-service build --no-clean",
+    "test:unit": "vue-cli-service test:unit"
+  },
+  "dependencies": {
+    "@casl/ability": "^3.0.2",
+    "@casl/vue": "^0.5.1",
+    "@types/nprogress": "^0.2.0",
+    "axios": "^0.18.0",
+    "core-js": "^2.6.5",
+    "element-ui": "^2.9.2",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
+    "muse-ui": "^3.0.2",
+    "nprogress": "^0.2.0",
+    "v-tooltip": "^2.0.2",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.0.2",
+    "vue-google-charts": "^0.3.2",
+    "vue-property-decorator": "^8.1.0",
+    "vue-router": "^3.0.3",
+    "vue-shortkey": "^3.1.7",
+    "vue-spinner": "^1.0.3",
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.4.5",
+    "@types/jest": "^23.1.4",
+    "@types/lodash": "^4.14.129",
+    "@types/moment-timezone": "^0.5.12",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-typescript": "^3.7.0",
+    "@vue/cli-plugin-unit-jest": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-plugin-component": "^1.1.1",
+    "dts-gen": "^0.5.8",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.1.0",
+    "ts-jest": "^23.0.0",
+    "typescript": "^3.4.3",
+    "vue-cli-plugin-element": "^1.0.1",
+    "vue-template-compiler": "^2.5.21"
+  }
 }
